trunk/Archive/393479eb4335d68b06fd2a0c3e3ebc9c-cc73e281b3b6abc9bf6cf4f153b944a6/output
+ g++ -std=c++11 main.cpp -O3
main.cpp:2:1: error: expected class-name before ‘{’ token
 {
 ^
main.cpp: In constructor ‘Rectangle::Rectangle(double, double)’:
main.cpp:4:49: error: class ‘Rectangle’ does not have any field named ‘Shape’
        Rectangle(double Length, double Width) : Shape("Rectangle") { ... } 
                                                 ^
main.cpp:4:70: error: expected primary-expression before ‘...’ token
        Rectangle(double Length, double Width) : Shape("Rectangle") { ... } 
                                                                      ^
main.cpp:4:70: error: expected ‘;’ before ‘...’ token
main.cpp: In constructor ‘Square::Square(double)’:
main.cpp:10:26: error: class ‘Square’ does not have any field named ‘Shape’
    Square(double side) : Shape("Square"), Rectangle(side, side) {}
                          ^
